@@ -1,3 +1,5 @@
+* Fix Safari 2 bugs in getWindow() and Event.extend() as well as comment Element.extend(). [jddalton]
+
 * Fix coding pattern so function expressions will work in Safari 2. [jddalton]
 
 * Remove undeclared assignments for ECMA 3.1 strict mode compliance. [jddalton, kangax]
